# predictions_of_heart_attack_risk

./: .gitignore  .~lock.ТЗ.docx#  README.md  m3s19_pohar.ipynb  m3s19_pohar_v1.ipynb  predicted_result.csv  pyproject.toml  ТЗ.docx
project_fastapi/: best_model.joblib  heart_test.csv  main.py  predicting_attack.py
project_fastapi/templates/: index.html  result.html
